--- a/Project.toml
+++ b/Project.toml
@@ -27,11 +27,19 @@ PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
 ProgressLogging = "33c8b6b6-d38a-422a-b730-caa89a2f386c"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Scratch = "6c6a2e73-6563-6170-7368-637461726353"
+SimplePlutoInclude = "6f00a2c5-ea4a-46bf-9183-91b7b57a087f"
 StringEncodings = "69024149-9ee7-55f6-a4c4-859efe599b68"
 StructTypes = "856f2bd8-1eba-4b0a-8007-ebc267875bd4"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 Unicode = "4ec0a83e-493e-50e2-b9ac-8f72acf5a8f5"
+
+[extras]
+NarrativeTest = "9563631e-acd4-5dd8-bebb-4cf36518960d"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["NarrativeTest", "Test"]
 
 [compat]
 AbstractPlutoDingetjes = "1.3.2"
@@ -45,5 +53,6 @@ Pluto = "0.20.8"
 PlutoUI = "0.7.62"
 ProgressLogging = "0.1.4"
 Revise = "3.7.6"
+SimplePlutoInclude = "0.2.0"
 StructTypes = "1.11.0"
 UUIDs = "1.11.0"
