--- a/Project.toml
+++ b/Project.toml
@@ -34,6 +34,12 @@ Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 Unicode = "4ec0a83e-493e-50e2-b9ac-8f72acf5a8f5"
 
+[weakdeps]
+PlutoRunner = "dc6b355a-2368-4481-ae6d-ae0351418d79"
+
+[extensions]
+PlutoRunnerExt = "PlutoRunner"
+
 [extras]
 NarrativeTest = "9563631e-acd4-5dd8-bebb-4cf36518960d"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
