--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ AbstractPlutoDingetjes = "6e696c72-6542-2067-7265-42206c756150"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 Chain = "8be319e6-bccf-4806-a6f7-6fae938471bc"
 DBInterface = "a10d1c49-ce27-4219-8d33-6db1a4562965"
+DataAPI = "9a962f9c-6df0-11e9-0e5d-c546b8b5ee8a"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DuckDB = "d2f5444f-75bc-4fdf-ac35-56f514c445e1"
@@ -40,15 +41,9 @@ PlutoRunner = "dc6b355a-2368-4481-ae6d-ae0351418d79"
 [extensions]
 PlutoRunnerExt = "PlutoRunner"
 
-[extras]
-NarrativeTest = "9563631e-acd4-5dd8-bebb-4cf36518960d"
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-
-[targets]
-test = ["NarrativeTest", "Test"]
-
 [compat]
 AbstractPlutoDingetjes = "1.3.2"
+DataAPI = "1.16.0"
 DuckDB = "1.3.0"
 FunSQL = "0.14.0, 0.15.0"
 HTTP = "1.10.8"
@@ -62,3 +57,10 @@ Revise = "3.7.6"
 SimplePlutoInclude = "0.2.0"
 StructTypes = "1.11.0"
 UUIDs = "1.11.0"
+
+[extras]
+NarrativeTest = "9563631e-acd4-5dd8-bebb-4cf36518960d"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["NarrativeTest", "Test"]
