--- a/Project.toml
+++ b/Project.toml
@@ -17,9 +17,13 @@ PlutoSliderServer = "2fc8631c-6f24-4c5b-bca7-cbb509c42db4"
 ProgressLogging = "33c8b6b6-d38a-422a-b730-caa89a2f386c"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
+URIs = "5c2747f8-b7ea-4ff2-ba2e-563bfd36b1d4"
 
 [weakdeps]
 PlutoRunner = "dc6b355a-2368-4481-ae6d-ae0351418d79"
 
 [extensions]
 PlutoRunnerExt = "PlutoRunner"
+
+[compat]
+URIs = "1.6.1"
